# splicing-toolkit

./: .gitignore  README.md  pyproject.toml
splicing_classifier/: __main__.py  classifier.py  process_inputs.py
splicing_classifier/classifier_module/: classifier_utils.py
splicing_classifier/input_module/: process_gff.py  process_gtf.py
splicing_toolkit/: main.py  utils.py
tests/: process_gff_tests.py  test_process_inputs.py
tests/test_documents/: test_bed_file.bed
