[tool.poetry]
name = "splicing-toolkit"
version = "0.1.0"
description = "A toolkit designed to take bed files from experiments and generate detailed splicing info with as little user input as possible. Goal is to make this usable to analyze the LRS data from the nRNA experiments performed by Tucker a ways back."
authors = ["Ethan Brown <ethan.brown@yale.edu>"]
readme = "README.md"
packages = [{include = "splicing_toolkit"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.1"
numpy = "^1.24.3"
matplotlib = "^3.7.1"
pybedtools = "^0.9.0"
sqlalchemy = "^2.0.15"
pysqldf = "^1.2.3"
pyranges = "^0.0.129"
tqdm = "^4.65.0"


[tool.poetry.group.dev.dependencies]
ipython = "^8.24.0"
flake8 = "^7.0.0"
pytest = "^8.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
